Added translation to TranslationActivity. Only Maori, and only 3 words so far.

--- a/app/src/main/res/layout/activity_translation.xml
+++ b/app/src/main/res/layout/activity_translation.xml
@@ -6,6 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".TranslationActivity">
 
+    <TextView
+        android:id="@+id/txtUntranslated"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:text=""
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtTranslated"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtUntranslated" />
+
     <Button
         android:id="@+id/btnReturn"
         android:layout_width="wrap_content"
