--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <path
-        android:fillColor="#3DDC84"
+        android:fillColor="#26a0da"
         android:pathData="M0,0h108v108h-108z" />
     <path
         android:fillColor="#00000000"
@@ -58,7 +58,7 @@
         android:strokeWidth="0.8"
         android:strokeColor="#33FFFFFF" />
     <path
-        android:fillColor="#00000000"
+        android:fillColor="#26a0da"
         android:pathData="M0,9L108,9"
         android:strokeWidth="0.8"
         android:strokeColor="#33FFFFFF" />
