Added 14 entries to the database, and this is accessed in the translationActivity method. Incosistent access, likely due to the synchronous calls. Will use LiveData to access database next commit.

--- a/app/src/main/res/layout/activity_translation.xml
+++ b/app/src/main/res/layout/activity_translation.xml
@@ -6,10 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".TranslationActivity">
 
+    <Button
+        android:id="@+id/btnReturn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#26a0da"
+        android:padding="25dp"
+        android:paddingBottom="0dp"
+        android:text="test"
+        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/txtUntranslated"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text=""
         android:textSize="24sp"
@@ -21,12 +34,30 @@
     <TextView
         android:id="@+id/txtTranslated"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtUntranslated" />
+
+    <TextView
+        android:id="@+id/txtUntranslatedSentence"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTranslated" />
+
+    <TextView
+        android:id="@+id/txtTranslatedSentence"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtUntranslatedSentence" />
 
     <Button
         android:id="@+id/btnReturn"
