Now uses LiveData to access the database.

--- a/app/src/main/res/layout/activity_translation.xml
+++ b/app/src/main/res/layout/activity_translation.xml
@@ -6,28 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".TranslationActivity">
 
-    <Button
-        android:id="@+id/btnReturn2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#26a0da"
-        android:padding="25dp"
-        android:paddingBottom="0dp"
-        android:text="test"
-        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
         android:id="@+id/txtUntranslated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+
         android:text=""
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,9 +22,9 @@
         android:id="@+id/txtTranslated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtUntranslated" />
 
@@ -45,8 +32,9 @@
         android:id="@+id/txtUntranslatedSentence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTranslated" />
 
@@ -54,8 +42,9 @@
         android:id="@+id/txtTranslatedSentence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtUntranslatedSentence" />
 
